[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Abilities/CollidingAOE/CollidingAOE.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Abilities/Projectiles/energy-ball.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "active",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "decay",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "impact",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "aoe",
"speed": 5.0
} ]

[node name="CollidingAOE" type="Node2D"]
script = ExtResource( 1 )

[node name="AbilityBody" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="AbilityBody"]
frames = SubResource( 1 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="AbilityBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AbilityBody/Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AbilityBody"]

[node name="TargetLocation" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="TargetLocation"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetLocation/Area2D"]
